--- a/src/app/core/layout/component/app-menu/app-menu.component.scss
+++ b/src/app/core/layout/component/app-menu/app-menu.component.scss
@@ -14,6 +14,12 @@
     border-radius: var(--border-radius);
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
     padding: 0.5rem 1.5rem;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .layout-menu {
